lab4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment ;
Rule 7     instruction -> if_stmt
Rule 8     instruction -> loops
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> CONTINUE ;
Rule 11    instruction -> return_expr ;
Rule 12    instruction -> PRINT create_stmt ;
Rule 13    instruction -> { instructions }
Rule 14    id_change -> ID
Rule 15    id_change -> ID [ expression , expression ]
Rule 16    assignment -> id_change = expression
Rule 17    assignment -> id_change ADDASSIGN expression
Rule 18    assignment -> id_change SUBASSIGN expression
Rule 19    assignment -> id_change MULASSIGN expression
Rule 20    assignment -> id_change DIVASSIGN expression
Rule 21    expression -> expression ADD expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression MUL expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> MINUS expression
Rule 26    expression -> ID '
Rule 27    expression -> expression DOTADD expression
Rule 28    expression -> expression DOTSUB expression
Rule 29    expression -> expression DOTMUL expression
Rule 30    expression -> expression DOTDIVIDE expression
Rule 31    expression -> matrix_expression
Rule 32    expression -> matrix_create
Rule 33    expression -> INTNUM
Rule 34    expression -> FLOAT
Rule 35    expression -> ID
Rule 36    matrix_expression -> ZEROS ( expression )
Rule 37    matrix_expression -> ONES ( expression )
Rule 38    matrix_expression -> EYE ( expression )
Rule 39    matrix_create -> [ matrix_rows ]
Rule 40    matrix_rows -> [ matrix_elems ] , matrix_rows
Rule 41    matrix_rows -> [ matrix_elems ]
Rule 42    matrix_elems -> expression , matrix_elems
Rule 43    matrix_elems -> expression
Rule 44    condition -> expression GREATER expression
Rule 45    condition -> expression LESS expression
Rule 46    condition -> expression GREATEREQ expression
Rule 47    condition -> expression LESSEQ expression
Rule 48    condition -> expression NOTEQ expression
Rule 49    condition -> expression EQ expression
Rule 50    if_stmt -> IF ( condition ) instruction
Rule 51    if_stmt -> IF ( condition ) instruction ELSE instruction
Rule 52    create_stmt -> p_print_list
Rule 53    p_print_list -> STRING
Rule 54    p_print_list -> p_print_list , expression
Rule 55    p_print_list -> expression
Rule 56    loops -> while_l
Rule 57    loops -> for_l
Rule 58    while_l -> WHILE ( condition ) instruction
Rule 59    for_l -> FOR ID = expression : expression instruction
Rule 60    return_expr -> RETURN
Rule 61    return_expr -> RETURN expression

Terminals, with rules where they appear

'                    : 26
(                    : 36 37 38 50 51 58
)                    : 36 37 38 50 51 58
,                    : 15 40 42 54
:                    : 59
;                    : 6 9 10 11 12
=                    : 16 59
ADD                  : 21
ADDASSIGN            : 17
BREAK                : 9
CONTINUE             : 10
DIVASSIGN            : 20
DIVIDE               : 24
DOTADD               : 27
DOTDIVIDE            : 30
DOTMUL               : 29
DOTSUB               : 28
ELSE                 : 51
EQ                   : 49
EYE                  : 38
FLOAT                : 34
FOR                  : 59
GREATER              : 44
GREATEREQ            : 46
ID                   : 14 15 26 35 59
IF                   : 50 51
INTNUM               : 33
LESS                 : 45
LESSEQ               : 47
MINUS                : 22 25
MUL                  : 23
MULASSIGN            : 19
NOTEQ                : 48
ONES                 : 37
PRINT                : 12
RETURN               : 60 61
STRING               : 53
SUBASSIGN            : 18
WHILE                : 58
ZEROS                : 36
[                    : 15 39 40 41
]                    : 15 39 40 41
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear

assignment           : 6
condition            : 50 51 58
create_stmt          : 12
expression           : 15 15 16 17 18 19 20 21 21 22 22 23 23 24 24 25 27 27 28 28 29 29 30 30 36 37 38 42 43 44 44 45 45 46 46 47 47 48 48 49 49 54 55 59 59 61
for_l                : 57
id_change            : 16 17 18 19 20
if_stmt              : 7
instruction          : 4 5 50 51 51 58 59
instructions         : 2 4 13
instructions_opt     : 1
loops                : 8
matrix_create        : 32
matrix_elems         : 40 41 42
matrix_expression    : 31
matrix_rows          : 39 40
p_print_list         : 52 54
program              : 0
return_expr          : 11
while_l              : 56

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (16) assignment -> . id_change = expression
    (17) assignment -> . id_change ADDASSIGN expression
    (18) assignment -> . id_change SUBASSIGN expression
    (19) assignment -> . id_change MULASSIGN expression
    (20) assignment -> . id_change DIVASSIGN expression
    (50) if_stmt -> . IF ( condition ) instruction
    (51) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (56) loops -> . while_l
    (57) loops -> . for_l
    (60) return_expr -> . RETURN
    (61) return_expr -> . RETURN expression
    (14) id_change -> . ID
    (15) id_change -> . ID [ expression , expression ]
    (58) while_l -> . WHILE ( condition ) instruction
    (59) for_l -> . FOR ID = expression : expression instruction

    $end            reduce using rule 3 (instructions_opt -> .)
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    PRINT           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 14
    RETURN          shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    return_expr                    shift and go to state 10
    id_change                      shift and go to state 13
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (16) assignment -> . id_change = expression
    (17) assignment -> . id_change ADDASSIGN expression
    (18) assignment -> . id_change SUBASSIGN expression
    (19) assignment -> . id_change MULASSIGN expression
    (20) assignment -> . id_change DIVASSIGN expression
    (50) if_stmt -> . IF ( condition ) instruction
    (51) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (56) loops -> . while_l
    (57) loops -> . for_l
    (60) return_expr -> . RETURN
    (61) return_expr -> . RETURN expression
    (14) id_change -> . ID
    (15) id_change -> . ID [ expression , expression ]
    (58) while_l -> . WHILE ( condition ) instruction
    (59) for_l -> . FOR ID = expression : expression instruction

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    PRINT           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 14
    RETURN          shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    instruction                    shift and go to state 21
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    return_expr                    shift and go to state 10
    id_change                      shift and go to state 13
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 4

    (5) instructions -> instruction .

    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> assignment . ;

    ;               shift and go to state 22


state 6

    (7) instruction -> if_stmt .

    BREAK           reduce using rule 7 (instruction -> if_stmt .)
    CONTINUE        reduce using rule 7 (instruction -> if_stmt .)
    PRINT           reduce using rule 7 (instruction -> if_stmt .)
    {               reduce using rule 7 (instruction -> if_stmt .)
    IF              reduce using rule 7 (instruction -> if_stmt .)
    RETURN          reduce using rule 7 (instruction -> if_stmt .)
    ID              reduce using rule 7 (instruction -> if_stmt .)
    WHILE           reduce using rule 7 (instruction -> if_stmt .)
    FOR             reduce using rule 7 (instruction -> if_stmt .)
    $end            reduce using rule 7 (instruction -> if_stmt .)
    }               reduce using rule 7 (instruction -> if_stmt .)
    ELSE            reduce using rule 7 (instruction -> if_stmt .)


state 7

    (8) instruction -> loops .

    BREAK           reduce using rule 8 (instruction -> loops .)
    CONTINUE        reduce using rule 8 (instruction -> loops .)
    PRINT           reduce using rule 8 (instruction -> loops .)
    {               reduce using rule 8 (instruction -> loops .)
    IF              reduce using rule 8 (instruction -> loops .)
    RETURN          reduce using rule 8 (instruction -> loops .)
    ID              reduce using rule 8 (instruction -> loops .)
    WHILE           reduce using rule 8 (instruction -> loops .)
    FOR             reduce using rule 8 (instruction -> loops .)
    $end            reduce using rule 8 (instruction -> loops .)
    }               reduce using rule 8 (instruction -> loops .)
    ELSE            reduce using rule 8 (instruction -> loops .)


state 8

    (9) instruction -> BREAK . ;

    ;               shift and go to state 23


state 9

    (10) instruction -> CONTINUE . ;

    ;               shift and go to state 24


state 10

    (11) instruction -> return_expr . ;

    ;               shift and go to state 25


state 11

    (12) instruction -> PRINT . create_stmt ;
    (52) create_stmt -> . p_print_list
    (53) p_print_list -> . STRING
    (54) p_print_list -> . p_print_list , expression
    (55) p_print_list -> . expression
    (21) expression -> . expression ADD expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MUL expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . MINUS expression
    (26) expression -> . ID '
    (27) expression -> . expression DOTADD expression
    (28) expression -> . expression DOTSUB expression
    (29) expression -> . expression DOTMUL expression
    (30) expression -> . expression DOTDIVIDE expression
    (31) expression -> . matrix_expression
    (32) expression -> . matrix_create
    (33) expression -> . INTNUM
    (34) expression -> . FLOAT
    (35) expression -> . ID
    (36) matrix_expression -> . ZEROS ( expression )
    (37) matrix_expression -> . ONES ( expression )
    (38) matrix_expression -> . EYE ( expression )
    (39) matrix_create -> . [ matrix_rows ]

    STRING          shift and go to state 28
    MINUS           shift and go to state 30
    ID              shift and go to state 31
    INTNUM          shift and go to state 34
    FLOAT           shift and go to state 35
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38
    [               shift and go to state 39

    create_stmt                    shift and go to state 26
    p_print_list                   shift and go to state 27
    expression                     shift and go to state 29
    matrix_expression              shift and go to state 32
    matrix_create                  shift and go to state 33

state 12

    (13) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (16) assignment -> . id_change = expression
    (17) assignment -> . id_change ADDASSIGN expression
    (18) assignment -> . id_change SUBASSIGN expression
    (19) assignment -> . id_change MULASSIGN expression
    (20) assignment -> . id_change DIVASSIGN expression
    (50) if_stmt -> . IF ( condition ) instruction
    (51) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (56) loops -> . while_l
    (57) loops -> . for_l
    (60) return_expr -> . RETURN
    (61) return_expr -> . RETURN expression
    (14) id_change -> . ID
    (15) id_change -> . ID [ expression , expression ]
    (58) while_l -> . WHILE ( condition ) instruction
    (59) for_l -> . FOR ID = expression : expression instruction

    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    PRINT           shift and go to state 11
    {               shift and go to state 12
    IF              shift and go to state 14
    RETURN          shift and go to state 17
    ID              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20

    instructions                   shift and go to state 40
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    return_expr                    shift and go to state 10
    id_change                      shift and go to state 13
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 13

    (16) assignment -> id_change . = expression
    (17) assignment -> id_change . ADDASSIGN expression
    (18) assignment -> id_change . SUBASSIGN expression
    (19) assignment -> id_change . MULASSIGN expression
    (20) assignment -> id_change . DIVASSIGN expression

    =               shift and go to state 41
    ADDASSIGN       shift and go to state 42
    SUBASSIGN       shift and go to state 43
    MULASSIGN       shift and go to state 44
    DIVASSIGN       shift and go to state 45


state 14

    (50) if_stmt -> IF . ( condition ) instruction
    (51) if_stmt -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 46


state 15

    (56) loops -> while_l .

    BREAK           reduce using rule 56 (loops -> while_l .)
    CONTINUE        reduce using rule 56 (loops -> while_l .)
    PRINT           reduce using rule 56 (loops -> while_l .)
    {               reduce using rule 56 (loops -> while_l .)
    IF              reduce using rule 56 (loops -> while_l .)
    RETURN          reduce using rule 56 (loops -> while_l .)
    ID              reduce using rule 56 (loops -> while_l .)
    WHILE           reduce using rule 56 (loops -> while_l .)
    FOR             reduce using rule 56 (loops -> while_l .)
    $end            reduce using rule 56 (loops -> while_l .)
    }               reduce using rule 56 (loops -> while_l .)
    ELSE            reduce using rule 56 (loops -> while_l .)


state 16

    (57) loops -> for_l .

    BREAK           reduce using rule 57 (loops -> for_l .)
    CONTINUE        reduce using rule 57 (loops -> for_l .)
    PRINT           reduce using rule 57 (loops -> for_l .)
    {               reduce using rule 57 (loops -> for_l .)
    IF              reduce using rule 57 (loops -> for_l .)
    RETURN          reduce using rule 57 (loops -> for_l .)
    ID              reduce using rule 57 (loops -> for_l .)
    WHILE           reduce using rule 57 (loops -> for_l .)
    FOR             reduce using rule 57 (loops -> for_l .)
    $end            reduce using rule 57 (loops -> for_l .)
    }               reduce using rule 57 (loops -> for_l .)
    ELSE            reduce using rule 57 (loops -> for_l .)


state 17

    (60) return_expr -> RETURN .
    (61) return_expr -> RETURN . expression
    (21) expression -> . expression ADD expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MUL expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . MINUS expression
    (26) expression -> . ID '
    (27) expression -> . expression DOTADD expression
    (28) expression -> . expression DOTSUB expression
    (29) expression -> . expression DOTMUL expression
    (30) expression -> . expression DOTDIVIDE expression
    (31) expression -> . matrix_expression
    (32) expression -> . matrix_create
    (33) expression -> . INTNUM
    (34) expression -> . FLOAT
    (35) expression -> . ID
    (36) matrix_expression -> . ZEROS ( expression )
    (37) matrix_expression -> . ONES ( expression )
    (38) matrix_expression -> . EYE ( expression )
    (39) matrix_create -> . [ matrix_rows ]

    ;               reduce using rule 60 (return_expr -> RETURN .)
    MINUS           shift and go to state 30
    ID              shift and go to state 31
    INTNUM          shift and go to state 34
    FLOAT           shift and go to state 35
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38
    [               shift and go to state 39

    expression                     shift and go to state 47
    matrix_expression              shift and go to state 32
    matrix_create                  shift and go to state 33

state 18

    (14) id_change -> ID .
    (15) id_change -> ID . [ expression , expression ]

    =               reduce using rule 14 (id_change -> ID .)
    ADDASSIGN       reduce using rule 14 (id_change -> ID .)
    SUBASSIGN       reduce using rule 14 (id_change -> ID .)
    MULASSIGN       reduce using rule 14 (id_change -> ID .)
    DIVASSIGN       reduce using rule 14 (id_change -> ID .)
    [               shift and go to state 48


state 19

    (58) while_l -> WHILE . ( condition ) instruction

    (               shift and go to state 49


state 20

    (59) for_l -> FOR . ID = expression : expression instruction

    ID              shift and go to state 50


state 21

    (4) instructions -> instructions instruction .

    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 22

    (6) instruction -> assignment ; .

    BREAK           reduce using rule 6 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 6 (instruction -> assignment ; .)
    PRINT           reduce using rule 6 (instruction -> assignment ; .)
    {               reduce using rule 6 (instruction -> assignment ; .)
    IF              reduce using rule 6 (instruction -> assignment ; .)
    RETURN          reduce using rule 6 (instruction -> assignment ; .)
    ID              reduce using rule 6 (instruction -> assignment ; .)
    WHILE           reduce using rule 6 (instruction -> assignment ; .)
    FOR             reduce using rule 6 (instruction -> assignment ; .)
    $end            reduce using rule 6 (instruction -> assignment ; .)
    }               reduce using rule 6 (instruction -> assignment ; .)
    ELSE            reduce using rule 6 (instruction -> assignment ; .)


state 23

    (9) instruction -> BREAK ; .

    BREAK           reduce using rule 9 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 9 (instruction -> BREAK ; .)
    PRINT           reduce using rule 9 (instruction -> BREAK ; .)
    {               reduce using rule 9 (instruction -> BREAK ; .)
    IF              reduce using rule 9 (instruction -> BREAK ; .)
    RETURN          reduce using rule 9 (instruction -> BREAK ; .)
    ID              reduce using rule 9 (instruction -> BREAK ; .)
    WHILE           reduce using rule 9 (instruction -> BREAK ; .)
    FOR             reduce using rule 9 (instruction -> BREAK ; .)
    $end            reduce using rule 9 (instruction -> BREAK ; .)
    }               reduce using rule 9 (instruction -> BREAK ; .)
    ELSE            reduce using rule 9 (instruction -> BREAK ; .)


state 24

    (10) instruction -> CONTINUE ; .

    BREAK           reduce using rule 10 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 10 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 10 (instruction -> CONTINUE ; .)
    {               reduce using rule 10 (instruction -> CONTINUE ; .)
    IF              reduce using rule 10 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 10 (instruction -> CONTINUE ; .)
    ID              reduce using rule 10 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 10 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 10 (instruction -> CONTINUE ; .)
    $end            reduce using rule 10 (instruction -> CONTINUE ; .)
    }               reduce using rule 10 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 10 (instruction -> CONTINUE ; .)


state 25

    (11) instruction -> return_expr ; .

    BREAK           reduce using rule 11 (instruction -> return_expr ; .)
    CONTINUE        reduce using rule 11 (instruction -> return_expr ; .)
    PRINT           reduce using rule 11 (instruction -> return_expr ; .)
    {               reduce using rule 11 (instruction -> return_expr ; .)
    IF              reduce using rule 11 (instruction -> return_expr ; .)
    RETURN          reduce using rule 11 (instruction -> return_expr ; .)
    ID              reduce using rule 11 (instruction -> return_expr ; .)
    WHILE           reduce using rule 11 (instruction -> return_expr ; .)
    FOR             reduce using rule 11 (instruction -> return_expr ; .)
    $end            reduce using rule 11 (instruction -> return_expr ; .)
    }               reduce using rule 11 (instruction -> return_expr ; .)
    ELSE            reduce using rule 11 (instruction -> return_expr ; .)


state 26

    (12) instruction -> PRINT create_stmt . ;

    ;               shift and go to state 51


state 27

    (52) create_stmt -> p_print_list .
    (54) p_print_list -> p_print_list . , expression

    ;               reduce using rule 52 (create_stmt -> p_print_list .)
    ,               shift and go to state 52


state 28

    (53) p_print_list -> STRING .

    ,               reduce using rule 53 (p_print_list -> STRING .)
    ;               reduce using rule 53 (p_print_list -> STRING .)


state 29

    (55) p_print_list -> expression .
    (21) expression -> expression . ADD expression
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . MUL expression
    (24) expression -> expression . DIVIDE expression
    (27) expression -> expression . DOTADD expression
    (28) expression -> expression . DOTSUB expression
    (29) expression -> expression . DOTMUL expression
    (30) expression -> expression . DOTDIVIDE expression

    ,               reduce using rule 55 (p_print_list -> expression .)
    ;               reduce using rule 55 (p_print_list -> expression .)
    ADD             shift and go to state 53
    MINUS           shift and go to state 54
    MUL             shift and go to state 55
    DIVIDE          shift and go to state 56
    DOTADD          shift and go to state 57
    DOTSUB          shift and go to state 58
    DOTMUL          shift and go to state 59
    DOTDIVIDE       shift and go to state 60


state 30

    (25) expression -> MINUS . expression
    (21) expression -> . expression ADD expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression MUL expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . MINUS expression
    (26) expression -> . ID '
    (27) expression -> . expression DOTADD expression
    (28) expression -> . expression DOTSUB expression
    (29) expression -> . expression DOTMUL expression
    (30) expression -> . expression DOTDIVIDE expression
    (31) expression -> . matrix_expression
    (32) expression -> . matrix_create
    (33) expression -> . INTNUM
    (34) expression -> . FLOAT
    (35) expression -> . ID
    (36) matrix_expression -> . ZEROS ( expression )
    (37) matrix_expression -> . ONES ( expression )
    (38) matrix_expression -> . EYE ( expression )
    (39) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 30
    ID              shift and go to state 31
    INTNUM          shift and go to state 34
    FLOAT           shift and go to state 35
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    EYE             shift and go to state 38
    [               shift and go to state 39

    expression                     shift and go to state 61
    matrix_expression              shift and go to state 32
    matrix_create                  shift and go to state 33

state 31

    (26) expression -> ID . '
    (35) expression -> ID .

    '               shift and go to state 62
    ADD             reduce using rule 35 (expression -> ID .)
    MINUS           reduce using rule 35 (expression -> ID .)
    MUL             reduce using rule 35 (expression -> ID .)
    DIVIDE          reduce using rule 35 (expression -> ID .)
    DOTADD          reduce using rule 35 (expression -> ID .)
    DOTSUB          reduce using rule 35 (expression -> ID .)
    DOTMUL          reduce using rule 35 (expression -> ID .)
    DOTDIVIDE       reduce using rule 35 (expression -> ID .)
    ,               reduce using rule 35 (expression -> ID .)
    ;               reduce using rule 35 (expression -> ID .)
    GREATER         reduce using rule 35 (expression -> ID .)
    LESS            reduce using rule 35 (expression -> ID .)
    GREATEREQ       reduce using rule 35 (expression -> ID .)
    LESSEQ          reduce using rule 35 (expression -> ID .)
    NOTEQ           reduce using rule 35 (expression -> ID .)
    EQ              reduce using rule 35 (expression -> ID .)
    )               reduce using rule 35 (expression -> ID .)
    ]               reduce using rule 35 (expression -> ID .)
    :               reduce using rule 35 (expression -> ID .)
    BREAK           reduce using rule 35 (expression -> ID .)
    CONTINUE        reduce using rule 35 (expression -> ID .)
    PRINT           reduce using rule 35 (expression -> ID .)
    {               reduce using rule 35 (expression -> ID .)
    IF              reduce using rule 35 (expression -> ID .)
    RETURN          reduce using rule 35 (expression -> ID .)
    ID              reduce using rule 35 (expression -> ID .)
    WHILE           reduce using rule 35 (expression -> ID .)
    FOR             reduce using rule 35 (expression -> ID .)


state 32

    (31) expression -> matrix_expression .

    ADD             reduce using rule 31 (expression -> matrix_expression .)
    MINUS           reduce using rule 31 (expression -> matrix_expression .)
    MUL             reduce using rule 31 (expression -> matrix_expression .)
    DIVIDE          reduce using rule 31 (expression -> matrix_expression .)
    DOTADD          reduce using rule 31 (expression -> matrix_expression .)
    DOTSUB          reduce using rule 31 (expression -> matrix_expression .)
    DOTMUL          reduce using rule 31 (expression -> matrix_expression .)
    DOTDIVIDE       reduce using rule 31 (expression -> matrix_expression .)
    ,               reduce using rule 31 (expression -> matrix_expression .)
    ;               reduce using rule 31 (expression -> matrix_expression .)
    GREATER         reduce using rule 31 (expression -> matrix_expression .)
    LESS            reduce using rule 31 (expression -> matrix_expression .)
    GREATEREQ       reduce using rule 31 (expression -> matrix_expression .)
    LESSEQ          reduce using rule 31 (expression -> matrix_expression .)
    NOTEQ           reduce using rule 31 (expression -> matrix_expression .)
    EQ              reduce using rule 31 (expression -> matrix_expression .)
    )               reduce using rule 31 (expression -> matrix_expression .)
    ]               reduce using rule 31 (expression -> matrix_expression .)
    :               reduce using rule 31 (expression -> matrix_expression .)
    BREAK           reduce using rule 31 (expression -> matrix_expression .)
    CONTINUE        reduce using rule 31 (expression -> matrix_expression .)
    PRINT           reduce using rule 31 (expression -> matrix_expression .)
    {               reduce using rule 31 (expression -> matrix_expression .)
    IF              reduce using rule 31 (expression -> matrix_expression .)
    RETURN          reduce using rule 31 (expression -> matrix_expression .)
    ID              reduce using rule 31 (expression -> matrix_expression .)
    WHILE           reduce using rule 31 (expression -> matrix_expression .)
    FOR             reduce using rule 31 (expression -> matrix_expression .)


state 33

    (32) expression -> matrix_create .

    ADD             reduce using rule 32 (expression -> matrix_create .)
    MINUS           reduce using rule 32 (expression -> matrix_create .)
    MUL             reduce using rule 32 (expression -> matrix_create .)
    DIVIDE          reduce using rule 32 (expression -> matrix_create .)
    DOTADD          reduce using rule 32 (expression -> matrix_create .)
    DOTSUB          reduce using rule 32 (expression -> matrix_create .)
    DOTMUL          reduce using rule 32 (expression -> matrix_create .)
    DOTDIVIDE       reduce using rule 32 (expression -> matrix_create .)
    ,               reduce using rule 32 (expression -> matrix_create .)
    ;               reduce using rule 32 (expression -> matrix_create .)
    GREATER         reduce using rule 32 (expression -> matrix_create .)
    LESS            reduce using rule 32 (expression -> matrix_create .)
    GREATEREQ       reduce using rule 32 (expression -> matrix_create .)
    LESSEQ          reduce using rule 32 (expression -> matrix_create .)
    NOTEQ           reduce using rule 32 (expression -> matrix_create .)
    EQ              reduce using rule 32 (expression -> matrix_create .)
    )               reduce using rule 32 (expression -> matrix_create .)
    ]               reduce using rule 32 (expression -> matrix_create .)
    :               reduce using rule 32 (expression -> matrix_create .)
    BREAK           reduce using rule 32 (expression -> matrix_create .)
    CONTINUE        reduce using rule 32 (expression -> matrix_create .)
    PRINT           reduce using rule 32 (expression -> matrix_create .)
    {               reduce using rule 32 (expression -> matrix_create .)
    IF              reduce using rule 32 (expression -> matrix_create .)
    RETURN          reduce using rule 32 (expression -> matrix_create .)
    ID              reduce using rule 32 (expression -> matrix_create .)
    WHILE           reduce using rule 32 (expression -> matrix_create .)
    FOR             reduce using rule 32 (expression -> matrix_create .)


state 34

    (33) expression -> INTNUM .

    ADD             reduce using rule 33 (expression -> INTNUM .)
    MINUS           reduce using rule 33 (expression -> INTNUM .)
    MUL             reduce using rule 33 (expression -> INTNUM .)
    DIVIDE          reduce using rule 33 (expression -> INTNUM .)
    DOTADD          reduce using rule 33 (expression -> INTNUM .)
    DOTSUB          reduce using rule 33 (expression -> INTNUM .)
    DOTMUL          reduce using rule 33 (expression -> INTNUM .)
    DOTDIVIDE       reduce using rule 33 (expression -> INTNUM .)
    ,               reduce using rule 33 (expression -> INTNUM .)
    ;               reduce using rule 33 (expression -> INTNUM .)
    GREATER         reduce using rule 33 (expression -> INTNUM .)
    LESS            reduce using rule 33 (expression -> INTNUM .)
    GREATEREQ       reduce using rule 33 (expression -> INTNUM .)
    LESSEQ          reduce using rule 33 (expression -> INTNUM .)
    NOTEQ           reduce using rule 33 (expression -> INTNUM .)
    EQ              reduce using rule 33 (expression -> INTNUM .)
    )               reduce using rule 33 (expression -> INTNUM .)
    ]               reduce using rule 33 (expression -> INTNUM .)
    :               reduce using rule 33 (expression -> INTNUM .)
    BREAK           reduce using rule 33 (expression -> INTNUM .)
    CONTINUE        reduce using rule 33 (expression -> INTNUM .)
    PRINT           reduce using rule 33 (expression -> INTNUM .)
    {               reduce using rule 33 (expression -> INTNUM .)
    IF              reduce using rule 33 (expression -> INTNUM .)
    RETURN          reduce using rule 33 (expression -> INTNUM .)
    ID              reduce using rule 33 (expression -> INTNUM .)
    WHILE           reduce using rule 33 (expression -> INTNUM .)
    FOR             reduce using rule 33 (expression -> INTNUM .)


state 35

    (34) expression -> FLOAT .
